# income-genie

./: Dockerfile  README.md  TODO.md  alembic.ini  compose.yaml  income_predictions.csv  model_metrics.csv  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
saved_models/: CatBoost_20251129_233618.cbm  CatBoost_20251129_233618.pkl  LightGBM_20251129_233618.pkl  LightGBM_20251129_233618.txt  XGBoost_20251129_233618.pkl  ensemble_metrics_20251129_233618.csv  ensemble_weights_20251129_233618.pkl  feature_importance_20251129_233618.csv  model_info_20251129_233618.txt  scaler_20251129_233618.pkl
src/: config.py  main.py  utils.py
src/core/: inference.py  train.py
src/migrations/: env.py
src/pages/: data_analysis.py  home.py  model_training.py  predictions.py  results.py  training_results.py
